--- a/V6/index.html
+++ b/V6/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://unpkg.com/vue@3.4.9/dist/vue.global.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="">
 </head>
 <body>
 
@@ -13,7 +14,12 @@
         <h1>Frontend'de Öğrenmemiz Gerekenler</h1>
     </header>
 
-    <section id="frontend"></section>
+    <section id="frontend">
+        <h2>Yol Haritası</h2>
+        <p>Html</p>
+        <p>Css</p>
+        <p>Vue Js</p>
+    </section>
 
     <script src="script.js" defer></script>
 </body>
