--- a/V23(Kısa Yazım Tarzı)/index.html
+++ b/V23(Kısa Yazım Tarzı)/index.html
@@ -16,11 +16,12 @@
 
     <section id="frontend">
         <h2>Event Binding</h2>
-        <button v-on:click="add(5)">Arttır</button>
+        <button @click="add(5)">Arttır</button>
         <button v-on:click="reduce(5)">Azalt</button>
         <p v-once>Başlangıç: {{counter}}</p>
         <p>Sonuc: {{counter}}</p>
-        <input v-model="name">
+        <input :value="name" v-model="name">
+        <input v-model="lastName">
         <!-- type="text" v-on:input="setName($event)" v-bind:value="name" -->
         <button v-on:click="reset">Reset</button>
         <p>Adınız {{fullNameComputed}}</p>
