--- a/V39(Saldırı Oyunu-Karşılıklı Saldırı-2)/index.html
+++ b/V39(Saldırı Oyunu-Karşılıklı Saldırı-2)/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container" v-if="winner">
             <h2>Oyun Bitti</h2>
             <h4>Bilgisayar Kazandı</h4>
             <h4>Oyuncu Kazandı</h4>
@@ -40,7 +40,7 @@
             <button>Yeni Oyun</button>
         </div>
         <div id="controls">
-            <button>Saldır</button>
+            <button @click="attackToComputer()">Saldır</button>
             <button :disabled="true">Süper Saldırı</button>
             <button>Can Ver</button>
         </div>
